--- a/viewer/templates/base.html
+++ b/viewer/templates/base.html
@@ -41,12 +41,15 @@
                 <li class="nav-item">
                     <a class="nav-link {% active_link 'index' strict=True %}" href="{% url 'index' %}">Home</a>
                 </li>
+                {% if request.user.is_staff %}
                 <li class="nav-item {% active_link 'trips' strict=True %}">
                     <a class="nav-link" href="{% url 'trips' %}">Trips</a>
                 </li>
-                {% if request.user.is_staff %}
                 <li class="nav-item {% active_link 'trip_add' strict=True %}">
                     <a class="nav-link" href="{% url 'trip_add' %}">Add trip</a>
+                </li>
+                <li class="nav-item {% active_link 'purchased_trips' strict=True %}">
+                    <a class="nav-link" href="{% url 'purchased_trips' %}">Purchased trips</a>
                 </li>
                 {% endif %}
             </ul>
