--- a/viewer/static/css/styles.css
+++ b/viewer/static/css/styles.css
@@ -33,6 +33,24 @@ h1 {
 }
 
 
+.trip-line-image-container {
+    position: relative;
+}
+
+.last-minute-banner {
+    position: absolute;
+    top: 45px;
+    left: -50px;
+    background-color: red;
+    color: white;
+    transform: rotate(-44deg);
+    width: 20%;
+    padding: 7px 53px;
+    font-weight: bold;
+    font-size: 16;
+
+}
+
 .globe-image {
     width: 100%;
     height: 100%;
